Fixed spacing issue in events caused by #4 (#6)
* Remove flex property from event containers

--- a/assets/css/mathsoc.scss
+++ b/assets/css/mathsoc.scss
@@ -170,13 +170,11 @@
 }
 
 .events-containerh {
-  display: flex;
   overflow: visible;
   // overflow-inline: none;
   flex-wrap: wrap;
   width: 500px;
   margin: 10px;
-  align-items: flex-start;
 }
 
 .events-pic {
